syntax = "proto3";

package set_map;

option go_package = "xgo/tests/pb/pbsets";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

//import "tests/proto/cases/sets/set_common.proto";

import "proto/json.proto";

message TypeSetMap1 {
  map<string, google.protobuf.Any> f_any_native1 = 1 [ (json.field) = { any: { native: true } } ];
  map<string, google.protobuf.Any> f_any_native2 = 2 [ (json.field) = { any: { native: false } } ];

  map<string, google.protobuf.Any> f_any_proto1 = 3 [ (json.field) = { any: { proto: true } } ];
  map<string, google.protobuf.Any> f_any_proto2 = 4 [ (json.field) = { any: { proto: false } } ];


  map<string, google.protobuf.Duration> f_duration_native1 = 11 [ (json.field) = { duration: { native: true } } ];
  map<string, google.protobuf.Duration> f_duration_native2 = 21 [ (json.field) = { duration: { native: false } } ];

  map<string, google.protobuf.Duration> f_duration_string1 = 12 [ (json.field) = { duration: { string: true } } ];
  map<string, google.protobuf.Duration> f_duration_string2 = 22 [ (json.field) = { duration: { string: false } } ];

  map<string, google.protobuf.Duration> f_duration_nanoseconds1 = 13 [ (json.field) = { duration: { nanoseconds: true } } ];
  map<string, google.protobuf.Duration> f_duration_nanoseconds2 = 23 [ (json.field) = { duration: { nanoseconds: false } } ];

  map<string, google.protobuf.Duration> f_duration_microseconds1 = 14 [ (json.field) = { duration: { microseconds: true } } ];
  map<string, google.protobuf.Duration> f_duration_microseconds2 = 24 [ (json.field) = { duration: { microseconds: false } } ];

  map<string, google.protobuf.Duration> f_duration_milliseconds1 = 15 [ (json.field) = { duration: { milliseconds: true } } ];
  map<string, google.protobuf.Duration> f_duration_milliseconds2 = 25 [ (json.field) = { duration: { milliseconds: false } } ];

  map<string, google.protobuf.Duration> f_duration_seconds1 = 16 [ (json.field) = { duration: { seconds: true } } ];
  map<string, google.protobuf.Duration> f_duration_seconds2 = 26 [ (json.field) = { duration: { seconds: false } } ];

  map<string, google.protobuf.Duration> f_duration_minutes1 = 17 [ (json.field) = { duration: { minutes: true } } ];
  map<string, google.protobuf.Duration> f_duration_minutes2 = 27 [ (json.field) = { duration: { minutes: false } } ];

  map<string, google.protobuf.Duration> f_duration_hours1 = 18 [ (json.field) = { duration: { hours: true } } ];
  map<string, google.protobuf.Duration> f_duration_hours2 = 28 [ (json.field) = { duration: { hours: false } } ];


  map<string, google.protobuf.Timestamp> f_timestamp_native1 = 31 [ (json.field) = { timestamp: { native: true } } ];
  map<string, google.protobuf.Timestamp> f_timestamp_native2 = 41 [ (json.field) = { timestamp: { native: false } } ];

  map<string, google.protobuf.Timestamp> f_timestamp_time_layout1 = 32 [ (json.field) = { timestamp: { time_layout: { golang: "2006-01-02T15:04:05Z07:00" } } } ];
  map<string, google.protobuf.Timestamp> f_timestamp_time_layout2 = 42 [ (json.field) = { timestamp: { time_layout: { golang: "Mon, 02 Jan 2006 15:04:05 MST" } } } ];

  map<string, google.protobuf.Timestamp> f_timestamp_unix_nano1 = 33 [ (json.field) = { timestamp: { unix_nano: true } } ];
  map<string, google.protobuf.Timestamp> f_timestamp_unix_nano2 = 43 [ (json.field) = { timestamp: { unix_nano: false } } ];

  map<string, google.protobuf.Timestamp> f_timestamp_unix_micro1 = 34 [ (json.field) = { timestamp: { unix_micro: true } } ];
  map<string, google.protobuf.Timestamp> f_timestamp_unix_micro2 = 44 [ (json.field) = { timestamp: { unix_micro: false } } ];

  map<string, google.protobuf.Timestamp> f_timestamp_unix_milli1 = 35 [ (json.field) = { timestamp: { unix_milli: true } } ];
  map<string, google.protobuf.Timestamp> f_timestamp_unix_milli2 = 45 [ (json.field) = { timestamp: { unix_milli: false } } ];

  map<string, google.protobuf.Timestamp> f_timestamp_unix_sec1 = 36 [ (json.field) = { timestamp: { unix_sec: true } } ];
  map<string, google.protobuf.Timestamp> f_timestamp_unix_sec2 = 46 [ (json.field) = { timestamp: { unix_sec: false } } ];
}
