syntax = "proto3";

package set_oneof;

option go_package = "xgo/tests/pb/pbsets";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

import "tests/proto/cases/sets/set_common.proto";

import "proto/json.proto";

message TypeSetOneOf1 {
  oneof OneEnum1 {
    option (json.oneof) = { json: "one_enum1", hide: false };

    set_common.Enum1 f_enum_number1 = 1 [ (json.field) = { enum: { format: Number } } ];
    set_common.Enum1 f_enum_string1 = 2 [ (json.field) = { enum: { format: String } } ];
  }

  oneof OneAny1 {
    option (json.oneof) = { json: "one_any1", hide: true };

    google.protobuf.Any f_any_native1 = 3 [ (json.field) = { any: { format: Native } } ];
    google.protobuf.Any f_any_proto1  = 4 [ (json.field) = { any: { format: Proto  } } ];
  }

  oneof OneDuration1 {
    option (json.oneof) = { json: "one_duration1", hide: false };

    google.protobuf.Duration f_duration_native1       = 11 [ (json.field) = { duration: { format: Native } } ];
    google.protobuf.Duration f_duration_string1       = 12 [ (json.field) = { duration: { format: String } } ];
  }
  oneof OneDuration2 {
    option (json.oneof) = { json: "one_duration2", hide: true };

    google.protobuf.Duration f_duration_nanoseconds1  = 13 [ (json.field) = { duration: { format: Nanoseconds } } ];
    google.protobuf.Duration f_duration_microseconds1 = 14 [ (json.field) = { duration: { format: Microseconds } } ];
  }
  oneof OneDuration3 {
    option (json.oneof) = { json: "one_duration3", hide: false };

    google.protobuf.Duration f_duration_milliseconds1 = 15 [ (json.field) = { duration: { format: Milliseconds } } ];
    google.protobuf.Duration f_duration_seconds1      = 16 [ (json.field) = { duration: { format: Seconds } } ];
  }
  oneof OneDuration4 {
    option (json.oneof) = { json: "one_duration4", hide: true };

    google.protobuf.Duration f_duration_minutes1      = 17 [ (json.field) = { duration: { format: Minutes } } ];
    google.protobuf.Duration f_duration_hours1        = 18 [ (json.field) = { duration: { format: Hours } } ];
  }

  oneof OneTimestamp1 {
    option (json.oneof) = { json: "one_timestamp1", hide: false };

    google.protobuf.Timestamp f_timestamp_native1      = 21 [ (json.field) = { timestamp: { format: Native } } ];
    google.protobuf.Timestamp f_timestamp_time_layout1 = 22 [ (json.field) = {
      timestamp: { format: TimeLayout, layout: { golang: "2006-01-02T15:04:05Z07:00" } },
    } ];
  }
  oneof OneTimestamp2 {
    option (json.oneof) = { json: "one_timestamp2", hide: true };

    google.protobuf.Timestamp f_timestamp_unix_nano1   = 23 [ (json.field) = { timestamp: { format: UnixNano } } ];
    google.protobuf.Timestamp f_timestamp_unix_micro1  = 24 [ (json.field) = { timestamp: { format: UnixMicro } } ];
  }
  oneof OneTimestamp3 {
    option (json.oneof) = { json: "one_timestamp3", hide: false };

    google.protobuf.Timestamp f_timestamp_unix_milli1  = 25 [ (json.field) = { timestamp: { format: UnixMilli } } ];
    google.protobuf.Timestamp f_timestamp_unix_sec1    = 26 [ (json.field) = { timestamp: { format: UnixSec } } ];
  }
}
